--- a/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
+++ b/PrivateYelp/PrivateYelp/Base.lproj/Main.storyboard
@@ -10,6 +10,9 @@
         <array key="HKGrotesk-Bold.otf">
             <string>HKGrotesk-Bold</string>
         </array>
+        <array key="HKGrotesk-Regular.otf">
+            <string>HKGrotesk-Regular</string>
+        </array>
         <array key="HKGrotesk-SemiBold.otf">
             <string>HKGrotesk-SemiBold</string>
         </array>
@@ -33,7 +36,7 @@
                                 <rect key="frame" x="362" y="792" width="40" height="40"/>
                                 <state key="normal" image="myReviewsButtonBottomBarUnselected"/>
                                 <connections>
-                                    <segue destination="X0E-3R-EZy" kind="show" id="yWK-v6-P8G"/>
+                                    <segue destination="hLf-Rc-1hr" kind="show" id="mfz-Zt-KRj"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sqx-g9-FlE">
@@ -67,63 +70,119 @@
             </objects>
             <point key="canvasLocation" x="1281.1594202898552" y="137.94642857142856"/>
         </scene>
-        <!--Table View Controller-->
-        <scene sceneID="Yq8-2E-pH3">
+        <!--My Reviews View Controller-->
+        <scene sceneID="aN0-8I-tWz">
             <objects>
-                <tableViewController id="X0E-3R-EZy" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="D1S-38-6Dr">
+                <viewController id="hLf-Rc-1hr" customClass="MyReviewsViewController" customModule="PrivateYelp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="X7p-gT-a1k">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <view key="tableHeaderView" contentMode="scaleToFill" id="LGg-bq-Bm1">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="97"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <subviews>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eI9-l1-UxF">
-                                    <rect key="frame" x="18" y="91" width="379" height="6"/>
-                                    <color key="backgroundColor" red="0.34901960780000002" green="0.29411764709999999" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Vvx-eJ-tQk">
+                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="yx8-4L-qoP">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="83"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="khc-Sq-GUr">
+                                            <rect key="frame" x="18" y="77" width="378" height="6"/>
+                                            <color key="backgroundColor" red="0.34901960780000002" green="0.29411764709999999" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="6" id="4Zm-v6-xps"/>
+                                            </constraints>
+                                        </view>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g5q-MR-cOS">
+                                            <rect key="frame" x="18" y="30" width="377" height="39"/>
+                                            <fontDescription key="fontDescription" name="HKGrotesk-Bold" family="HK Grotesk" pointSize="32"/>
+                                            <color key="textColor" red="0.34901960780000002" green="0.29411764709999999" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="6" id="HHF-en-ULV"/>
+                                        <constraint firstAttribute="bottom" secondItem="khc-Sq-GUr" secondAttribute="bottom" id="97l-jo-jLk"/>
+                                        <constraint firstAttribute="trailing" secondItem="g5q-MR-cOS" secondAttribute="trailing" constant="19" id="Gl8-B2-yM6"/>
+                                        <constraint firstItem="khc-Sq-GUr" firstAttribute="leading" secondItem="yx8-4L-qoP" secondAttribute="leading" constant="18" id="Q7W-vW-bq5"/>
+                                        <constraint firstItem="g5q-MR-cOS" firstAttribute="top" secondItem="yx8-4L-qoP" secondAttribute="top" constant="30" id="fRX-pj-SBt"/>
+                                        <constraint firstItem="g5q-MR-cOS" firstAttribute="leading" secondItem="yx8-4L-qoP" secondAttribute="leading" constant="18" id="hSP-JZ-eFa"/>
+                                        <constraint firstItem="khc-Sq-GUr" firstAttribute="top" secondItem="g5q-MR-cOS" secondAttribute="bottom" constant="8" id="htb-Ld-Nl7"/>
+                                        <constraint firstAttribute="trailing" secondItem="khc-Sq-GUr" secondAttribute="trailing" constant="18" id="z73-O2-jt6"/>
                                     </constraints>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NUz-F5-EYe">
-                                    <rect key="frame" x="18" y="51" width="379" height="32"/>
-                                    <fontDescription key="fontDescription" name="HKGrotesk-Bold" family="HK Grotesk" pointSize="32"/>
-                                    <color key="textColor" red="0.34901960780000002" green="0.29411764709999999" blue="0.7843137255" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                    <nil key="highlightedColor"/>
-                                </label>
-                            </subviews>
-                            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            <constraints>
-                                <constraint firstItem="NUz-F5-EYe" firstAttribute="top" secondItem="LGg-bq-Bm1" secondAttribute="top" constant="51" id="763-hd-Gek"/>
-                                <constraint firstAttribute="bottom" secondItem="eI9-l1-UxF" secondAttribute="bottom" id="9VS-48-bWa"/>
-                                <constraint firstItem="NUz-F5-EYe" firstAttribute="leading" secondItem="LGg-bq-Bm1" secondAttribute="leading" constant="18" id="Amp-JM-tgw"/>
-                                <constraint firstAttribute="trailing" secondItem="NUz-F5-EYe" secondAttribute="trailing" constant="17" id="HaS-mJ-Bpt"/>
-                                <constraint firstItem="eI9-l1-UxF" firstAttribute="leading" secondItem="LGg-bq-Bm1" secondAttribute="leading" constant="18" id="dXv-JE-Vms"/>
-                                <constraint firstAttribute="trailing" secondItem="eI9-l1-UxF" secondAttribute="trailing" constant="17" id="uKE-9g-U3x"/>
-                                <constraint firstItem="eI9-l1-UxF" firstAttribute="top" secondItem="NUz-F5-EYe" secondAttribute="bottom" constant="8" id="wJN-B3-ZGg"/>
-                            </constraints>
-                        </view>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="ReviewCell" rowHeight="63" id="sV3-C5-Cza" customClass="ReviewTableViewCell" customModule="PrivateYelp" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="125" width="414" height="63"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="sV3-C5-Cza" id="4HZ-8I-AGm">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="63"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="X0E-3R-EZy" id="0Ee-78-bfe"/>
-                            <outlet property="delegate" destination="X0E-3R-EZy" id="TK9-5Z-HTC"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="wnu-1L-rDj"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DGK-yl-HGf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ReviewCell" id="qxr-BU-h5e" customClass="ReviewTableViewCell" customModule="PrivateYelp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="111" width="414" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qxr-BU-h5e" id="7ZW-3q-ro5">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="ERL-zT-hmf">
+                                <rect key="frame" x="12" y="792" width="390" height="40"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tfV-f4-Y1m">
+                                        <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="bOM-rr-3bl"/>
+                                        </constraints>
+                                        <state key="normal" image="mapButtonBottomBarUnselected"/>
+                                    </button>
+                                    <view contentMode="scaleToFill" horizontalHuggingPriority="248" translatesAutoresizingMaskIntoConstraints="NO" id="zGR-el-8qh">
+                                        <rect key="frame" x="52" y="0.0" width="286" height="40"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Search" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="R4N-Xe-Vzx">
+                                                <rect key="frame" x="13" y="3" width="260" height="34"/>
+                                                <fontDescription key="fontDescription" name="HKGrotesk-Regular" family="HK Grotesk" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <constraints>
+                                            <constraint firstItem="R4N-Xe-Vzx" firstAttribute="top" secondItem="zGR-el-8qh" secondAttribute="top" constant="3" id="SNY-ks-8XI"/>
+                                            <constraint firstItem="R4N-Xe-Vzx" firstAttribute="leading" secondItem="zGR-el-8qh" secondAttribute="leading" constant="13" id="cPa-7h-LvH"/>
+                                            <constraint firstAttribute="height" constant="40" id="e0b-zK-YsK"/>
+                                            <constraint firstAttribute="trailing" secondItem="R4N-Xe-Vzx" secondAttribute="trailing" constant="13" id="pm9-Dk-p2w"/>
+                                            <constraint firstAttribute="bottom" secondItem="R4N-Xe-Vzx" secondAttribute="bottom" constant="3" id="qZR-Um-Ma9"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PLf-99-dGO">
+                                        <rect key="frame" x="350" y="0.0" width="40" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="40" id="UiK-Uo-SKB"/>
+                                        </constraints>
+                                        <state key="normal" image="myReviewsButtonBottomBarSelected"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="9WJ-aS-b56" firstAttribute="trailing" secondItem="ERL-zT-hmf" secondAttribute="trailing" constant="12" id="6Ic-5T-kKh"/>
+                            <constraint firstItem="9WJ-aS-b56" firstAttribute="bottom" secondItem="ERL-zT-hmf" secondAttribute="bottom" constant="30" id="IWv-oO-1ns"/>
+                            <constraint firstItem="Vvx-eJ-tQk" firstAttribute="top" secondItem="9WJ-aS-b56" secondAttribute="top" id="MWN-92-BRd"/>
+                            <constraint firstItem="ERL-zT-hmf" firstAttribute="leading" secondItem="9WJ-aS-b56" secondAttribute="leading" constant="12" id="NIB-kj-Pns"/>
+                            <constraint firstItem="Vvx-eJ-tQk" firstAttribute="trailing" secondItem="9WJ-aS-b56" secondAttribute="trailing" id="NLT-uU-QBO"/>
+                            <constraint firstItem="Vvx-eJ-tQk" firstAttribute="bottom" secondItem="9WJ-aS-b56" secondAttribute="bottom" id="cEW-Ak-qnK"/>
+                            <constraint firstItem="Vvx-eJ-tQk" firstAttribute="leading" secondItem="9WJ-aS-b56" secondAttribute="leading" id="v4W-VN-v5F"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="9WJ-aS-b56"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="O2L-tk-3Tl"/>
+                    <connections>
+                        <outlet property="mapButton" destination="tfV-f4-Y1m" id="Ihn-cu-If3"/>
+                        <outlet property="myReviewsButton" destination="PLf-99-dGO" id="CfW-Ae-FLB"/>
+                        <outlet property="searchContainer" destination="zGR-el-8qh" id="Iuj-4K-sj1"/>
+                        <outlet property="searchTextField" destination="R4N-Xe-Vzx" id="DBK-AH-Nfb"/>
+                        <outlet property="tableView" destination="Vvx-eJ-tQk" id="g5h-s8-jST"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Qmg-We-7Ww" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2027.5362318840582" y="-532.36607142857144"/>
+            <point key="canvasLocation" x="2190" y="-546"/>
         </scene>
         <!--Review Rating Checklist View Controller-->
         <scene sceneID="ajl-Z1-goN">
@@ -826,6 +885,8 @@
         <image name="checklistButtonUnselected" width="24" height="24"/>
         <image name="checklistHeaderIcon" width="40" height="40"/>
         <image name="mapButtonBottomBarSelected" width="40" height="40"/>
+        <image name="mapButtonBottomBarUnselected" width="40" height="40"/>
+        <image name="myReviewsButtonBottomBarSelected" width="40" height="40"/>
         <image name="myReviewsButtonBottomBarUnselected" width="40" height="40"/>
         <image name="nextButton" width="40" height="40"/>
         <image name="notesHeaderIcon" width="40" height="40"/>
