--- a/PrivateYelp/PrivateYelp/ReviewTableViewCell.xib
+++ b/PrivateYelp/PrivateYelp/ReviewTableViewCell.xib
@@ -17,63 +17,75 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="66" id="KGk-i7-Jjw" customClass="ReviewTableViewCell" customModule="PrivateYelp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="68" id="KGk-i7-Jjw" customClass="ReviewTableViewCell" customModule="PrivateYelp" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="66"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="68"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="zVg-8T-red">
-                        <rect key="frame" x="18" y="10" width="223" height="46"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNV-yU-oD2">
+                        <rect key="frame" x="16" y="5" width="288" height="58"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Sh-Rq-olW">
-                                <rect key="frame" x="0.0" y="0.0" width="139" height="29"/>
-                                <fontDescription key="fontDescription" name="HKGrotesk-SemiBold" family="HK Grotesk" pointSize="18"/>
-                                <color key="textColor" red="0.2156862745" green="0.22352941179999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Restaurant Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kgl-dX-eyH">
-                                <rect key="frame" x="0.0" y="30" width="104.5" height="16"/>
-                                <fontDescription key="fontDescription" name="HKGrotesk-Regular" family="HK Grotesk" pointSize="12"/>
-                                <color key="textColor" red="0.2156862745" green="0.22352941179999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="1" translatesAutoresizingMaskIntoConstraints="NO" id="Tpk-RN-mwx">
+                                <rect key="frame" x="16" y="10" width="207" height="38"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Restaurant Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v66-eb-kRY">
+                                        <rect key="frame" x="0.0" y="0.0" width="139" height="21"/>
+                                        <fontDescription key="fontDescription" name="HKGrotesk-SemiBold" family="HK Grotesk" pointSize="18"/>
+                                        <color key="textColor" red="0.2156862745" green="0.22352941179999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="751" text="Restaurant Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bQW-bF-0db">
+                                        <rect key="frame" x="0.0" y="22" width="104.5" height="16"/>
+                                        <fontDescription key="fontDescription" name="HKGrotesk-Regular" family="HK Grotesk" pointSize="12"/>
+                                        <color key="textColor" red="0.2156862745" green="0.22352941179999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="zbj-y6-CxV">
+                                <rect key="frame" x="231" y="16" width="39" height="26"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cRg-ub-2Lq">
+                                        <rect key="frame" x="0.0" y="0.0" width="11" height="26"/>
+                                        <fontDescription key="fontDescription" name="HKGrotesk-SemiBold" family="HK Grotesk" pointSize="18"/>
+                                        <color key="textColor" red="0.2156862745" green="0.22352941179999999" blue="0.18039215689999999" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myReviewsStarIcon" translatesAutoresizingMaskIntoConstraints="NO" id="NZe-c3-zZX">
+                                        <rect key="frame" x="15" y="0.0" width="24" height="26"/>
+                                    </imageView>
+                                </subviews>
+                            </stackView>
                         </subviews>
-                    </stackView>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="z5s-M7-1zI">
-                        <rect key="frame" x="249" y="21" width="53" height="24"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="4.5" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vXv-Xb-Fl5">
-                                <rect key="frame" x="0.0" y="0.0" width="25" height="24"/>
-                                <fontDescription key="fontDescription" name="HKGrotesk-SemiBold" family="HK Grotesk" pointSize="18"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="myReviewsStarIcon" translatesAutoresizingMaskIntoConstraints="NO" id="nif-1x-nUo">
-                                <rect key="frame" x="29" y="0.0" width="24" height="24"/>
-                            </imageView>
-                        </subviews>
-                    </stackView>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="Tpk-RN-mwx" firstAttribute="leading" secondItem="QNV-yU-oD2" secondAttribute="leading" constant="16" id="1Iu-qa-bcQ"/>
+                            <constraint firstItem="Tpk-RN-mwx" firstAttribute="top" secondItem="QNV-yU-oD2" secondAttribute="top" constant="10" id="1ab-Y7-v2P"/>
+                            <constraint firstAttribute="bottom" secondItem="Tpk-RN-mwx" secondAttribute="bottom" constant="10" id="S3y-JC-S5t"/>
+                            <constraint firstAttribute="bottom" secondItem="zbj-y6-CxV" secondAttribute="bottom" constant="16" id="YuP-hq-CfN"/>
+                            <constraint firstItem="zbj-y6-CxV" firstAttribute="top" secondItem="QNV-yU-oD2" secondAttribute="top" constant="16" id="ZBs-WC-AGb"/>
+                            <constraint firstAttribute="trailing" secondItem="zbj-y6-CxV" secondAttribute="trailing" constant="18" id="gda-ZH-CEi"/>
+                            <constraint firstItem="zbj-y6-CxV" firstAttribute="leading" secondItem="Tpk-RN-mwx" secondAttribute="trailing" constant="8" id="jr0-vx-yZt"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="z5s-M7-1zI" firstAttribute="leading" secondItem="zVg-8T-red" secondAttribute="trailing" constant="8" id="47G-xZ-XE2"/>
-                    <constraint firstItem="zVg-8T-red" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="F3D-AO-Iik"/>
-                    <constraint firstAttribute="trailing" secondItem="z5s-M7-1zI" secondAttribute="trailing" constant="18" id="UXt-UL-1t3"/>
-                    <constraint firstAttribute="bottom" secondItem="z5s-M7-1zI" secondAttribute="bottom" constant="21" id="a8p-B0-Apx"/>
-                    <constraint firstItem="z5s-M7-1zI" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="pK9-SF-Ii9"/>
-                    <constraint firstItem="zVg-8T-red" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="wmv-5b-lXT"/>
-                    <constraint firstAttribute="bottom" secondItem="zVg-8T-red" secondAttribute="bottom" constant="10" id="wry-eu-rvd"/>
+                    <constraint firstAttribute="trailing" secondItem="QNV-yU-oD2" secondAttribute="trailing" constant="16" id="AMM-qI-7Q5"/>
+                    <constraint firstItem="QNV-yU-oD2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="UdP-SO-W1q"/>
+                    <constraint firstItem="QNV-yU-oD2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="hTi-YD-sUY"/>
+                    <constraint firstAttribute="bottom" secondItem="QNV-yU-oD2" secondAttribute="bottom" constant="5" id="ySN-bz-14u"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
-                <outlet property="addressLabel" destination="kgl-dX-eyH" id="mjh-3U-JJ2"/>
-                <outlet property="cellView" destination="H2p-sc-9uM" id="WdO-5h-ZDP"/>
-                <outlet property="nameLabel" destination="4Sh-Rq-olW" id="koj-ZI-OSf"/>
-                <outlet property="ratingLabel" destination="vXv-Xb-Fl5" id="ojb-JP-cqA"/>
+                <outlet property="addressLabel" destination="bQW-bF-0db" id="LGv-8y-uxI"/>
+                <outlet property="cellView" destination="QNV-yU-oD2" id="oWg-HS-rGo"/>
+                <outlet property="nameLabel" destination="v66-eb-kRY" id="BU1-3n-VKc"/>
+                <outlet property="ratingLabel" destination="cRg-ub-2Lq" id="vNC-Sn-yH4"/>
             </connections>
-            <point key="canvasLocation" x="131.8840579710145" y="160.04464285714286"/>
+            <point key="canvasLocation" x="131.8840579710145" y="160.71428571428569"/>
         </tableViewCell>
     </objects>
     <resources>
